--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,21 @@
         <artifactId>spring</artifactId>
         <version>2.0</version>
         <type>jar</type>
+        <exclusions>
+        <exclusion>
+          <groupId>xerces</groupId>
+          <artifactId>xercesImpl</artifactId>
+          <!-- too old version -->
+        </exclusion>
+      </exclusions>
      </dependency>
+     <dependency>
+    <!-- new version dependency instead of old one(s)  -->
+      <groupId>xerces</groupId>
+      <artifactId>xercesImpl</artifactId>
+      <version>2.8.1</version>
+      <type>jar</type>
+    </dependency>
      <!--dependency>
         <groupId>commons-logging</groupId>
         <artifactId>commons-logging</artifactId>
