--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
   </parent>
   <packaging>jar</packaging>
   <groupId>com.idega.block.platform</groupId>
-  <artifactId>org.springframework</artifactId>
+  <artifactId>com.idega.springframework</artifactId>
   <version>2.0</version>
   <organization />
   <inceptionYear>2004</inceptionYear>
