fixing standard applicationContext file

--- a/WEB-INF/web.xml
+++ b/WEB-INF/web.xml
@@ -11,6 +11,11 @@
 		<param-value>/WEB-INF/applicationContext.xml</param-value> 
 	</context-param> 
 	
+	<context-param>
+    	<param-name>contextConfigLocation</param-name> 
+		<param-value>classpath:com/idega/springframework/applicationContext.xml</param-value>
+	</context-param>
+	
 	<listener> 
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
