--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <parent>
   	<groupId>com.idega.block.platform</groupId>
   	<artifactId>com.idega.block.base</artifactId>
-  	<version>3.5.0</version>
+  	<version>4.0-SNAPSHOT</version>
   </parent>
   <name>idegaWeb Spring</name>
   <packaging>jar</packaging>
