--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,11 @@
   <organization />
   <inceptionYear>2004</inceptionYear>
   <description>Spring framework Integration</description>
+  <scm>
+    <connection>scm:cvs:ext:${user.name}@code.idega.com:/idega/cvs:${groupId}/${artifactId}/</connection>
+    <developerConnection>scm:cvs:ext:${user.name}@code.idega.com:/idega/cvs:${groupId}/${artifactId}/</developerConnection>
+  </scm>
+
   <developers>
     <developer>
       <name>Tryggvi Larusson</name>
