--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
   <packaging>jar</packaging>
   <groupId>com.idega.block.platform</groupId>
   <artifactId>com.idega.springframework</artifactId>
-  <version>2.1-m3</version>
+  <version>${com.idega.block.platform-com.idega.springframework-version}</version>
   <organization />
   <inceptionYear>2004</inceptionYear>
   <description>Spring framework Integration</description>
@@ -37,7 +37,7 @@
       <dependency>
         <groupId>org.springframework</groupId>
         <artifactId>spring</artifactId>
-        <version>2.1-m3</version>
+        <version>${org.springframework-spring-version}</version>
         <type>jar</type>
         <exclusions>
         <exclusion>
