--- a/pom.xml
+++ b/pom.xml
@@ -3,14 +3,14 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
   	<groupId>com.idega.block.platform</groupId>
-  	<artifactId>com.idega.block.base</artifactId>
-  	<version>4.0.0</version>
+  	<artifactId>com.idega.block.platform</artifactId>
+  	<version>4.0.0-SNAPSHOT</version>
   </parent>
   <name>idegaWeb Spring</name>
   <packaging>jar</packaging>
   <groupId>com.idega.block.platform</groupId>
   <artifactId>com.idega.springframework</artifactId>
-  <version>4.0.0</version>
+  <version>4.0.0-SNAPSHOT</version>
   <organization />
   <inceptionYear>2004</inceptionYear>
   <description>Spring framework Integration</description>
@@ -19,8 +19,8 @@
     <connection>scm:cvs:ext:${user.name}@code.idega.com:/idega/cvs:${groupId}/${artifactId}/</connection>
     <developerConnection>scm:cvs:ext:${user.name}@code.idega.com:/idega/cvs:${groupId}/${artifactId}/</developerConnection> 
      -->
-    <connection>scm:cvs:ext:civilis@code.idega.com:/idega/cvs:com.idega.block.platform/com.idega.springframework/</connection>
-    <developerConnection>scm:cvs:ext:civilis@code.idega.com:/idega/cvs:com.idega.block.platform/com.idega.springframework/</developerConnection>
+    <connection>scm:cvs:ext:${user.name}@code.idega.com:/idega/cvs:${groupId}/${artifactId}/</connection>
+    <developerConnection>scm:cvs:ext:${user.name}@code.idega.com:/idega/cvs:${groupId}/${artifactId}/</developerConnection>
   </scm>
 
   <developers>
@@ -44,6 +44,7 @@
      </dependency>
   </dependencies>
   
+  <!--  
   <build>
     <resources>
       <resource>
@@ -62,5 +63,5 @@
      </resource>
 	 </resources>
 	</build>
+	-->
 </project>
-
