--- a/pom.xml
+++ b/pom.xml
@@ -4,13 +4,13 @@
   <parent>
   	<groupId>com.idega.block.platform</groupId>
   	<artifactId>com.idega.block.platform</artifactId>
-  	<version>4.0.0-SNAPSHOT</version>
+  	<version>4.0.0</version>
   </parent>
   <name>idegaWeb Spring</name>
   <packaging>jar</packaging>
   <groupId>com.idega.block.platform</groupId>
   <artifactId>com.idega.springframework</artifactId>
-  <version>4.0.0-SNAPSHOT</version>
+  <version>4.0.0</version>
   <organization />
   <inceptionYear>2004</inceptionYear>
   <description>Spring framework Integration</description>
@@ -21,6 +21,7 @@
      -->
     <connection>scm:cvs:ext:${user.name}@code.idega.com:/idega/cvs:${groupId}/${artifactId}/</connection>
     <developerConnection>scm:cvs:ext:${user.name}@code.idega.com:/idega/cvs:${groupId}/${artifactId}/</developerConnection>
+    <tag>com_idega_block_platform_super-4_0_0</tag>
   </scm>
 
   <developers>
