--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,16 @@
         <groupId>org.springframework</groupId>
         <artifactId>spring</artifactId>
      </dependency>
+     <dependency>
+            <groupId>aspectj</groupId>
+            <artifactId>aspectjrt</artifactId>
+            <version>1.5.3</version>
+        </dependency>
+        <dependency>
+            <groupId>aspectj</groupId>
+            <artifactId>aspectjweaver</artifactId>
+            <version>1.5.3</version>
+        </dependency>
   </dependencies>
   
   <!--  
