*** empty log message ***

--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,13 @@
             <artifactId>aspectjweaver</artifactId>
             <version>1.5.3</version>
         </dependency>
+        <dependency>
+			<groupId>opensymphony</groupId>
+			<artifactId>quartz-all</artifactId>
+			<version>1.6.0</version>
+			<type>jar</type>
+		</dependency>
+        
   </dependencies>
   
   <!--  
