--- a/.settings/org.eclipse.jdt.core.prefs
+++ b/.settings/org.eclipse.jdt.core.prefs
@@ -1,5 +1,3 @@
-#Thu Nov 23 15:06:11 GMT 2006
-org.eclipse.jdt.core.compiler.codegen.targetPlatform=1.5
+#Wed Oct 03 17:23:14 EEST 2012
 eclipse.preferences.version=1
-org.eclipse.jdt.core.compiler.source=1.5
-org.eclipse.jdt.core.compiler.compliance=1.5
+org.eclipse.jdt.core.compiler.problem.forbiddenReference=warning
