--- a/pom.xml
+++ b/pom.xml
@@ -81,9 +81,9 @@
 	  <version>${org.springframework.version}</version>
 	 </dependency>
      <dependency>
-            <groupId>aspectj</groupId>
+            <groupId>org.aspectj</groupId>
             <artifactId>aspectjrt</artifactId>
-            <version>1.5.3</version>
+            <version>1.8.4</version>
         </dependency>
      <dependency>
             <groupId>log4j</groupId>
@@ -91,9 +91,9 @@
             <version>1.2.14</version>
         </dependency>
         <dependency>
-            <groupId>aspectj</groupId>
+            <groupId>org.aspectj</groupId>
             <artifactId>aspectjweaver</artifactId>
-            <version>1.5.3</version>
+            <version>1.8.4</version>
         </dependency>
         <dependency>
 			<groupId>opensymphony</groupId>
