--- a/pom.xml
+++ b/pom.xml
@@ -102,7 +102,13 @@
 		<groupId>org.quartz-scheduler</groupId>
 		<artifactId>quartz</artifactId>
 		<version>2.1.7</version>
-	</dependency>
+		<exclusions>
+			<exclusion>
+				<groupId>c3p0</groupId>
+				<artifactId>c3p0</artifactId>
+			</exclusion>
+		</exclusions>
+    </dependency>
 	<dependency>
 		<groupId>cglib</groupId>
 		<artifactId>cglib-nodep</artifactId>
